fix(proxy): fix the issue of some requests being suspended but never ending (#651)
Signed-off-by: SSpirits <admin@lv5.moe>